<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.ddf.common</groupId>
    <artifactId>ddf-common</artifactId>
    <packaging>pom</packaging>
    <version>boot3.3-2025.1-SNAPSHOT</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>17</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <!-- maven版本使用3.9.6以上版本 -->
        <maven.compiler.plugin.version>3.14.1</maven.compiler.plugin.version>
        <maven.surefire.plugin.version>3.5.4</maven.surefire.plugin.version>
        <maven.source.plugin.version>3.4.0</maven.source.plugin.version>
        <maven.archetype.plugin.version>3.3.0</maven.archetype.plugin.version>
        <maven.javadoc.plugin.version>3.12.0</maven.javadoc.plugin.version>
        <maven.release.plugin.version>3.3.0</maven.release.plugin.version>
        <maven.deploy.plugin.version>3.1.4</maven.deploy.plugin.version>
        <maven.sonar.plugin.version>5.5.0.6356</maven.sonar.plugin.version>
        <maven.test.skip>true</maven.test.skip>
    </properties>


    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.ddf.common</groupId>
                <artifactId>ddf-common-dependency</artifactId>
                <version>boot3.3-2025.1-SNAPSHOT</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <modules>
        <module>ddf-common-dependency</module>
        <module>ddf-common-api</module>
        <module>ddf-common-core</module>
        <module>ddf-common-mvc</module>
        <module>ddf-common-redis</module>
        <module>ddf-common-distributed-lock</module>
        <module>ddf-common-authentication</module>
        <module>ddf-common-sharding</module>
        <module>ddf-common-rocketmq</module>
        <module>ddf-common-alarm</module>
        <module>ddf-common-xxl-executor</module>
        <module>ddf-common-log4j</module>
        <module>ddf-common-limit</module>
        <module>ddf-common-captcha</module>
        <module>ddf-common-ids-service</module>
        <module>ddf-common-zookeeper</module>
        <module>ddf-common-websocket</module>
        <module>ddf-common-netty-broker</module>
        <module>ddf-common-mongo</module>
        <module>ddf-common-third-party</module>
        <module>ddf-common-script</module>
        <module>ddf-common-es</module>
        <module>ddf-common-ons</module>
        <module>ddf-common-vps</module>
        <module>ddf-common-mqtt</module>
        <module>ddf-common-mqtt-client</module>
        <module>ddf-common-canal</module>
    </modules>


    <!--    <distributionManagement>-->
    <!--        <repository>-->
    <!--            &lt;!&ndash; 注意这里的id要和settings.xml中配置servers节点下的server里的id一致，因为要找到对应的账号信息 &ndash;&gt;-->
    <!--            <id>aiyu_release</id>-->
    <!--            <name>Release Repository of nexus_release</name>-->
    <!--            <url>http://xxxx:8802/repository/aiyu_release/</url>-->
    <!--        </repository>-->

    <!--        <snapshotRepository>-->
    <!--            <id>aiyu_snapshot</id>-->
    <!--            <name>Snapshot Repository of nexus_snapshot</name>-->
    <!--            <url>http://xxxx:8802/repository/aiyu_snapshot/</url>-->
    <!--        </snapshotRepository>-->
    <!--    </distributionManagement>-->

    <repositories>
        <!--        <repository>-->
        <!--            <id>aiyu_public</id>-->
        <!--            &lt;!&ndash; 这里要和settings里的mirrors节点下的某一个mirror的url对应起来， 一般在settings.xml中配置的这个地址，都是在nexus中的一个group地址，-->
        <!--             然后将自己私服的release库地址和snapshot库地址都添加到这个组中， 即上面<distributionManagement>下<repository>和<snapshotRepository>&ndash;&gt;-->
        <!--            <url>http://xxxx:8802/repository/aiyu_public/</url>-->
        <!--            <releases>-->
        <!--                <enabled>true</enabled>-->
        <!--            </releases>-->
        <!--            <snapshots>-->
        <!--                <enabled>true</enabled>-->
        <!--                <updatePolicy>always</updatePolicy>-->
        <!--                <checksumPolicy>fail</checksumPolicy>-->
        <!--            </snapshots>-->
        <!--        </repository>-->
        <repository>
            <id>aliyun</id>
            <url>https://maven.aliyun.com/repository/public</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <releases>
                <enabled>true</enabled>
            </releases>
        </repository>
    </repositories>

    <pluginRepositories>
        <!--        <pluginRepository>-->
        <!--            <id>aiyu_public</id>-->
        <!--            <url>http://xxxx:8802/repository/aiyu_public/</url>-->
        <!--            <releases>-->
        <!--                <enabled>true</enabled>-->
        <!--            </releases>-->
        <!--            <snapshots>-->
        <!--                <enabled>true</enabled>-->
        <!--                <updatePolicy>always</updatePolicy>-->
        <!--                <checksumPolicy>fail</checksumPolicy>-->
        <!--            </snapshots>-->
        <!--        </pluginRepository>-->
        <pluginRepository>
            <id>aliyun</id>
            <url>https://maven.aliyun.com/repository/public</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>

        <pluginRepository>
            <id>spring-releases</id>
            <url>https://repo.spring.io/release</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>

    </pluginRepositories>
</project>
